--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Сторінка створена у Visual Studio Code</h1>
     <p>Використовуючи Emmet в Visual Studio Code можна створити структуру нової сторінки всього в один клік. </p>
-    <p>Створення сценарій Git, що демонструє створення нового репозиторію</p>
+    <p>Створення сценарію Git, що демонструє створення нового репозиторію</p>
 </body>
 </html>
