--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Сторінка створена у Visual Studio Code</h1>
-    <p>Використовуючи Emmet в Visual Studio Code можна створити структуру нової сторінки всього в один клік. </p>
-    <p>Створення сценарію Git, що демонструє створення нового репозиторію</p>
+    <button onclick="alert('Hello World')">Click me</button>
+
+    
+    <button onclick="alert( now )">Date</button>
+    <script src="script.js"></script>
 </body>
 </html>
